# glacis_gateway

./: .gitignore  Dockerfile  PROJECT.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/api/: webhooks.py
app/core/: queue.py
app/db/: MIGRATIONS.md  base.py  queries.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20240527_01_add_unique_constraints.py  20260527_03_add_vendor_schemas.py  e0f7e6f658c1_initial_migration.py
app/db/models/: invoice.py  raw_event.py  shipment.py  vendor_schema.py
app/services/: llm.py  registry.py
app/workers/: tasks.py
scripts/: lint.sh  setup_db.sh
tests/: conftest.py  test_ingestion.py  test_normalization.py  test_ordering.py
tests/integration/: conftest.py  test_full_pipeline.py
