[project]
name = "glacis-gateway"
version = "0.1.0"
description = "AI-powered webhook ingestion and normalization platform for logistics and financial vendor integrations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "arq>=0.25.0",
    "openai>=1.14.0",
    "structlog>=24.1.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.2.0",
    "ruff>=0.3.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests", "tests/integration"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "Q"]
ignore = []
